--- a/emocional.html
+++ b/emocional.html
@@ -389,6 +389,27 @@
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
+   <!-- Vlibras inicio -->
+   <div vw class="enabled">
+    <div vw-access-button class="active">
+    </div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget({
+        rootPah: '/app',
+        personalization: 'https://vlibras.gov.br/config/default_logo.json',
+        opacity: 0.4,
+        position: 'R',
+        avatar: 'hosana',
+      
+    });
+  </script>
+    <!-- Vlibras fim -->
+
 
 </body>
 
