--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
             </p>
           </div>
         </div>
+        
         <div class="col-lg-8 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
           <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -493,50 +494,58 @@
     </div>
   </section><!-- End Why Us Section -->
 
-  <!-- Planos -->
-
-  <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Planos</h1>
-    <p class="lead">Empodere-se com nossos planos.Juntas, somos invencíveis!</p>
-  </div>
-
-  <div class="container">
-    <div class="card-deck mb-3 text-center">
-
-      <div class="card mb-4 box-shadow cartao">
-        <div class="card-body primeiro">
-          <h4 class="cor-letra">Básico</h4>
-          <h2 class="card-title pricing-card-title cor-letra aumentar">Gratuito</h2>
-          <ul class="list-unstyled mt-3 mb-4 cor-letra">
-            <li>Fluxo de caixa</li>
-            <li>Capital de giro</li>
-            <li>Suporte Emocional</li>
-          </ul>
-          <button type="button" class="btn btn-lg btn-block btn-primary">Assinar</button>
-        </div>
-      </div>
-
-      <div class="card mb-4 box-shadow cartao">
-        <!-- <div class="card-header">
-          <h4 class="my-0 font-weight-normal">Enterprise</h4>
-        </div> -->
-        <div class="card-body segundo">
-          <h4 class="cor-letra">Avançado</h4>
-          <h2 class="card-title pricing-card-title cor-letra aumentar">R$117,90 <small>/mês</small></h2>
-          <ul class="list-unstyled mt-3 mb-4 cor-letra">
-            <li>Fluxo de caixa</li>
-            <li>Capital de giro</li>
-            <li>Alerta</li>
-            <li>Dashboard</li>
-            <li>KPI</li>
-          </ul>
-          <button type="button" class="btn btn-lg btn-block btn-primary">Assinar</button>
-        </div>
-      </div>
+  <!-- ======= Pricing Section - Planos ======= -->
+  <section id="pricing" class="pricing ">
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+      <h1 class="display-4">Planos</h1>
+      <p class="lead">Empodere-se com nossos planos.Juntas, somos invencíveis!</p>
     </div>
+    <div class="container ">
 
+      <div class="row justify-content-center ">
 
-  </div>
+        <div class="col-lg-4 col-md-6 cartao" data-aos="zoom-in" data-aos-delay="150">
+          <div class="box">
+            <h3 class="cor-letra" >Básico</h3>
+            <h4>Graça</h4>
+            <ul>
+              <li>Fluxo de caixa</li>
+              <li>Capital de giro</li>
+              <li>Suporte emocional</li>
+              <li class="na">Alerta</li>
+              <li class="na">Dashboard</li>
+              <li class="na">Kpi</li>
+            </ul>
+            <div class="btn-wrap">
+              <a href="#" class="btn-buy">Assinar</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 cartao" data-aos="zoom-in" data-aos-delay="150">
+          <div class="box dois">
+            <h3 class="cor-letra">Avançado</h3>
+            <h4><sup>R$</sup>117,90<span> /mês</span></h4>
+            <ul>
+              <li>Fluxo de caixa</li>
+              <li>Capital de giro</li>
+              <li>Suporte emocional</li>
+              <li>Alerta</li>
+              <li>Dashboard</li>
+              <li>Kpi</li>
+            </ul>
+            <div class="btn-wrap">
+              <a href="#" class="btn-buy">Assinar</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section><!-- End Pricing Section -->
+  
+  
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
