--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
           <li><a href="sobrenos.html">Sobre nós</a></li>
           <li><a href="servicos.html">Serviços</a></li>
           <li><a href="trainers.html">Doe</a></li>
-          <li><a href="events.html">Planos</a></li>
           <li class="dropdown"><a href="#"><span>Networking</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Artigos</a></li>
@@ -507,7 +506,7 @@
         <div class="col-lg-4 col-md-6 cartao" data-aos="zoom-in" data-aos-delay="150">
           <div class="box">
             <h3 class="cor-letra" >Básico</h3>
-            <h4>Graça</h4>
+            <h4>Gratuito</h4>
             <ul>
               <li>Fluxo de caixa</li>
               <li>Capital de giro</li>
@@ -630,7 +629,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright mx-auto">
-          &copy; Copyright <strong><span>Append</span></strong>. Todos os direitos reservados
+          &copy; Copyright <strong><span class="amarelo">Append</span></strong>. Todos os direitos reservados
         </div>
         <div class="credits mx-auto">
           <!-- All the links in the footer should remain intact. -->
@@ -638,7 +637,7 @@
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/ -->
           <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-          <p class="text-center mx-auto">Desenvolvido por EMP</p>
+          <p class="text-center mx-auto">Desenvolvido por <span class="amarelo">EMP</span></p>
         </div>
       </div>
     </div>
@@ -677,7 +676,19 @@
       
     });
   </script>
-    <!-- Vlibras fim -->
+  <!-- Vlibras fim -->
+
+  <!-- Acessibilidade -->
+  <script>(
+    function () {
+      var s = document.createElement("script");
+      s.setAttribute("data-account", "xHDSUQKusJ");
+      s.setAttribute("src", "https://cdn.userway.org/widget.js");
+      document.body.appendChild(s);
+    }
+    )();
+  </script>
+
 
 </body>
 
