--- a/servicos.html
+++ b/servicos.html
@@ -28,7 +28,7 @@
   <!-- Login -->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
   <link rel="stylesheet" href="./assets/css/login.css">
-  
+
   <!-- <link rel="stylesheet" href="./assets/css/card.scss"> -->
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -70,14 +70,13 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar" class="navbar order-last order-lg-0">
+      <nav id="navbar" class="navbar order-last order-lg-0 ">
         <ul>
           <li><a href="index.html">Home</a></li>
     
           <li><a href="sobrenos.html">Sobre nós</a></li>
           <li><a class="active" href="servicos.html">Serviços</a></li>
           <li><a href="trainers.html">Doe</a></li>
-          <li><a href="events.html">Planos</a></li>
           <li class="dropdown"><a href="#"><span>Networking</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Artigos</a></li>
@@ -287,6 +286,57 @@
         <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
       </body>
 
+      <!-- ======= Pricing Section - Planos ======= -->
+  <section id="pricing" class="pricing ">
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+      <h1 class="display-4">Planos</h1>
+      <p class="lead">Empodere-se com nossos planos.Juntas, somos invencíveis!</p>
+    </div>
+    <div class="container ">
+
+      <div class="row justify-content-center ">
+
+        <div class="col-lg-4 col-md-6 cartao" data-aos="zoom-in" data-aos-delay="150">
+          <div class="box">
+            <h3 class="cor-letra" >Básico</h3>
+            <h4>Gratuito</h4>
+            <ul>
+              <li>Fluxo de caixa</li>
+              <li>Capital de giro</li>
+              <li>Suporte emocional</li>
+              <li class="na">Alerta</li>
+              <li class="na">Dashboard</li>
+              <li class="na">Kpi</li>
+            </ul>
+            <div class="btn-wrap">
+              <a href="#" class="btn-buy">Assinar</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 cartao" data-aos="zoom-in" data-aos-delay="150">
+          <div class="box dois">
+            <h3 class="cor-letra">Avançado</h3>
+            <h4><sup>R$</sup>117,90<span> /mês</span></h4>
+            <ul>
+              <li>Fluxo de caixa</li>
+              <li>Capital de giro</li>
+              <li>Suporte emocional</li>
+              <li>Alerta</li>
+              <li>Dashboard</li>
+              <li>Kpi</li>
+            </ul>
+            <div class="btn-wrap">
+              <a href="#" class="btn-buy">Assinar</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section><!-- End Pricing Section -->
+
   <!-- Clientes -->
    <!-- ======= Testimonials Section ======= -->
    <section id="testimonials" class="testimonials">
@@ -424,7 +474,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright mx-auto">
-          &copy; Copyright <strong><span>Append</span></strong>. Todos os direitos reservados
+          &copy; Copyright <strong><span class="amarelo">Append</span></strong>. Todos os direitos reservados
         </div>
         <div class="credits mx-auto">
           <!-- All the links in the footer should remain intact. -->
@@ -432,7 +482,7 @@
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/ -->
           <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-          <p class="text-center mx-auto">Desenvolvido por EMP</p>
+          <p class="text-center mx-auto">Desenvolvido por <span class="amarelo">EMP</span></p>
         </div>
       </div>
     </div>
@@ -472,6 +522,17 @@
     });
   </script>
     <!-- Vlibras fim -->
+
+    <!-- Acessibilidade -->
+  <script>(
+    function () {
+      var s = document.createElement("script");
+      s.setAttribute("data-account", "xHDSUQKusJ");
+      s.setAttribute("src", "https://cdn.userway.org/widget.js");
+      document.body.appendChild(s);
+    }
+    )();
+  </script>
 
 </body>
 
