--- a/emocional.html
+++ b/emocional.html
@@ -397,7 +397,7 @@
         <!-- Playlists -->
         <section class="d-flex justify-content-center align-items-center" style="height: 100vh;">
           <div id="carouselExampleDark" class="carousel carousel-dark slide" style="width: 600px; height: 600px; margin:auto;">
-            <h2 class="text-center">Pratique onde quiser sempre que precisar</h2>
+            <h2 class="text-center">Profissionais</h2>
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
