--- a/index.html
+++ b/index.html
@@ -72,15 +72,10 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
-    
           <li><a href="sobrenos.html">Sobre nós</a></li>
           <li><a href="servicos.html">Serviços</a></li>
           <li><a href="trainers.html">Doe</a></li>
-          <li class="dropdown"><a href="#"><span>Networking</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Artigos</a></li>
-            </ul>
-          </li>
+          <li><a href="trainers.html">Networking</a></li>
           <li><a href="./emocional.html">Emocional</a></li>
           <li><a href="pricing.html">Contato</a></li>
 
@@ -340,7 +335,7 @@
                   </div>
               </div>
 
-              <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
+              <div class="col-md-6 col-lg-4 wow fadeIn mx-auto" data-wow-delay=".7s">
                   <div class="services-item bg-light">
                       <div class="p-4 text-center services-content">
                           <div class="services-content-icon">
