--- a/sobrenos.html
+++ b/sobrenos.html
@@ -73,15 +73,10 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a href="index.html">Home</a></li>
-    
           <li><a class="active" href="sobrenos.html">Sobre nós</a></li>
           <li><a href="servicos.html">Serviços</a></li>
           <li><a href="trainers.html">Doe</a></li>
-          <li class="dropdown"><a href="#"><span>Networking</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Artigos</a></li>
-            </ul>
-          </li>
+          <li><a href="trainers.html">Networking</a></li>
           <li><a href="./emocional.html">Emocional</a></li>
           <li><a href="pricing.html">Contato</a></li>
 
@@ -163,37 +158,48 @@
 </section><!-- End Hero -->
 
   <main id="main" data-aos="fade-in">
-    
 
-    <!-- ======= Breadcrumbs ======= -->
-        <div class="container-fluid py-5 my-5 emp ">
-          <div class="container py-5">
-              <div class="row g-5">
-                <!-- <div class="col-lg-5 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".3s">
-                  <div class="h-100 position-relative">
-                      <img src="./assets/imagens/logo_emp.png" class="img-fluid w-75 rounded" alt="" style="margin-bottom: 25%;">
-                  </div>
-              </div> -->
-                  <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn">
-                    <div class="col-lg-5 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".3s">
-                      <div class="h-100 position-relative">
-                          <img src="./assets/imagens/logo_emp.png" class="img-fluid w-75 rounded" alt="" style="margin-bottom: 25%;">
-                      </div>
-                  </div>
-                      <p class="descricao-emp">A <span class="amarelo">EMP</span> é mais que uma simples ideia, é o nosso negocio que ganhou vida a partir de mulheres da nossa realidade, que conseguiram ultrapassar
-                        uma barreira sozinhas, e foi pensando nelas e nas dores delas, que criamos o <span class="amarelo">Emp</span>oderando e Empreendendo (<span class="amarelo">EMP</span>). Sendo o nosso objetivo auxiliar e 
-                        facilitar diversas etapas da vida de uma mulher microempreendedora, criando assim automação nas areas de financias, mas também
-                        ajuda mental para nossas mulheres. Porque aqui, queremos ajudar e acolher, por isso enxergamos mulheres da periferia, que são diversas
-                        vezes esquecidas, e olhando ainda mais macro, enxergamos mulheres indigenas e nas lutas delas.
-                      </p>
-                  </div>
+<!-- about section start -->
+<div class="about_section layout_padding d-flex">
+  <div class="container">
+    </div>
+  </div>
+  <div class="about_section_2">
+     <div class="container">
+        <div class="row">
+           <!-- <div class="col-md-6">
+              <div class="about_img"><img src="images/about-img.png"></div>
+           </div> -->
+           <div class="col-md-6 alinhar fundo">
+            <div class="col-lg-5 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".3s">
+              <div class="h-100">
+                <img src="./assets/imagens/logo_emp.png" class="img-fluid w-75 rounded mx-auto" alt="" style="margin: 8%;">
+                <!-- <div class="position-absolute w-75" style="top: 25%; left: 25%;"> -->
+                    <!-- <img src="./assets/imagens/grupo.jpeg" class="img-fluid w-100 rounded" alt=""> -->
+                </div>
+            </div>
+              <div class="about_taital_main mx-auto">
+                 <p class="about_text mx-auto">
+                    A <span class="amarelo">EMP</span> é mais que uma simples ideia, é o nosso negocio que ganhou vida a partir de mulheres da nossa realidade, que conseguiram ultrapassar
+                    uma barreira sozinhas, e foi pensando nelas e nas dores delas, que criamos o <span class="amarelo">Emp</span>oderando e Empreendendo (<span class="amarelo">EMP</span>). Sendo o nosso objetivo auxiliar e 
+                    facilitar diversas etapas da vida de uma mulher microempreendedora, criando assim automação nas areas de financias, mas também
+                    ajuda mental para nossas mulheres. Porque aqui, queremos ajudar e acolher, por isso enxergamos mulheres da periferia, que são diversas
+                    vezes esquecidas, e olhando ainda mais macro, enxergamos mulheres indigenas e nas lutas delas.
+                  </p>
               </div>
-          </div>
+           </div>
+           <div class="col-md-6 alinhar">
+            <div class="about_img"><img src="./assets/imagens/grupo.jpeg" class="img-fluid w-100 rounded"></div>
+         </div>
         </div>
+     </div>
+  </div>
+</div>
+<!-- about section end -->
 
     <!-- Equipe carrossel -->
     <!-- Swiper -->
-    <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
+    <div class="text-center mx-auto pb-5 wow fadeIn equipe-margem" data-wow-delay=".3s" style="max-width: 600px;">
       <h2> Equipe </h2>
     </div>
     <div class="swiper mySwiper">
@@ -201,7 +207,7 @@
 
         <div class="swiper-slide">
           <img src="./assets/imagens/Julia.jpeg" height="400px" alt="">
-          <p>Julia Silva <br>Full Stack</p>
+          <p>Julia Silva <br>Full Stack e Product Owner</p>
         </div>
 
         <div class="swiper-slide">
@@ -211,12 +217,12 @@
 
         <div class="swiper-slide">
           <img src="./assets/imagens/Deivid.jpeg" height="400px" alt="">
-          <p>Deivid Moises <br>Full Stack</p>
+          <p>Deivid Moises <br>Full Stack Designer e Scrum Master</p>
         </div>
 
         <div class="swiper-slide">
           <img src="./assets/imagens/Gui.png" height="400px" alt="">
-          <p>Guilherme Alefe <br>Back End</p>
+          <p>Guilherme Alefe <br>Back-End e Financeiro</p>
         </div>
 
         <div class="swiper-slide">
@@ -226,7 +232,7 @@
 
         <div class="swiper-slide">
           <img src="./assets/imagens/Gaby.jpeg" height="400px" alt="">
-          <p>Gabriely Santos <br>Back End</p>
+          <p>Gabriely Santos <br>Back-End</p>
         </div>
       </div>
       <div class="swiper-pagination"></div>
@@ -236,7 +242,7 @@
   <section id="counts" class="counts section-bg cor-sobrenos">
     <div class="container">
 
-      <div class="row counters">
+      <div class="row counters ">
 
         <div class="col-lg-3 col-6 text-center">
           <span data-purecounter-start="0" data-purecounter-end="5234" data-purecounter-duration="1" class="purecounter"></span>
@@ -251,6 +257,10 @@
         <div class="col-lg-3 col-6 text-center">
           <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
           <p>Suporte</p>
+        </div>
+
+        <div class="col-lg-3 col-6 relativo">
+          <img src="./assets/imagens/menina.png" width="180px" height="180px" class="img-fluid" alt="">
         </div>
 
       </div>
