--- a/sobrenos.html
+++ b/sobrenos.html
@@ -197,6 +197,41 @@
 </div>
 <!-- about section end -->
 
+<!-- ======= Services Section ======= -->
+<section id="services" class="services services-nos">
+  <div class="container">
+
+    <div class="row">
+
+      <div class="col-lg-4 col-md-6">
+        <div class="icon-box text-center">
+          <div class="icon"><img src="./assets/imagens/missao.png" width="50px" height="50px" alt=""></div>
+          <h4 class="title">Missão</h4>
+          <p class="description">Fornecer ferramentas de gestão financeira e uma rede de apoio para microempreendedoras,promovendo o crescimento do seu negócio.</p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
+        <div class="icon-box text-center">
+          <div class="icon"><img src="./assets/imagens/visao.png" width="50px" height="50px" alt=""></div>
+          <h4 class="title">Visão</h4>
+          <p class="description">Atingir o maior número de microempreendedoras, revolucionando a forma como gerenciam seus negócios, moldando um futuro mais igualitário e próspero.</p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
+        <div class="icon-box text-center">
+          <div class="icon"><img src="./assets/imagens/valores.png" width="50px" height="50px" alt=""></div>
+          <h4 class="title">Valores</h4>
+          <p class="description">Equidade, respeito, diversidade, inclusão, transparência, inovação e sustentabilidade.</p>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section><!-- End Services Section -->
+
     <!-- Equipe carrossel -->
     <!-- Swiper -->
     <div class="text-center mx-auto pb-5 wow fadeIn equipe-margem" data-wow-delay=".3s" style="max-width: 600px;">
@@ -206,7 +241,7 @@
       <div class="swiper-wrapper">
 
         <div class="swiper-slide">
-          <img src="./assets/imagens/Julia.jpeg" height="400px" alt="">
+          <img src="./assets/imagens/Julia.png" height="400px" alt="">
           <p>Julia Silva <br>Full Stack e Product Owner</p>
         </div>
 
@@ -216,7 +251,7 @@
         </div>
 
         <div class="swiper-slide">
-          <img src="./assets/imagens/Deivid.jpeg" height="400px" alt="">
+          <img src="./assets/imagens/Deivid.png" height="400px" alt="">
           <p>Deivid Moises <br>Full Stack Designer e Scrum Master</p>
         </div>
 
@@ -231,7 +266,7 @@
         </div>
 
         <div class="swiper-slide">
-          <img src="./assets/imagens/Gaby.jpeg" height="400px" alt="">
+          <img src="./assets/imagens/Gaby.png" height="400px" alt="">
           <p>Gabriely Santos <br>Back-End</p>
         </div>
       </div>
@@ -239,28 +274,28 @@
     </div>
      
      <!-- ======= Counts Section ======= -->
-  <section id="counts" class="counts section-bg cor-sobrenos">
+  <section id="counts" class="counts section-bg cor-sobrenos" style="background-image: url('./assets/imagens/fundo.png'); background-repeat: no-repeat  ;">
     <div class="container">
 
-      <div class="row counters ">
+      <div class="row counters">
 
         <div class="col-lg-3 col-6 text-center">
           <span data-purecounter-start="0" data-purecounter-end="5234" data-purecounter-duration="1" class="purecounter"></span>
-          <p>Acesso</p>
+          <p class="letra">Acesso</p>
         </div>
 
         <div class="col-lg-3 col-6 text-center">
           <span data-purecounter-start="0" data-purecounter-end="3400" data-purecounter-duration="1" class="purecounter"></span>
-          <p>Horas</p>
+          <p class="letra">Horas</p>
         </div>
 
         <div class="col-lg-3 col-6 text-center">
           <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
-          <p>Suporte</p>
+          <p class="letra">Suporte</p>
         </div>
 
         <div class="col-lg-3 col-6 relativo">
-          <img src="./assets/imagens/menina.png" width="180px" height="180px" class="img-fluid" alt="">
+          <img src="./assets/imagens/meninas.png" class="img-fluid" alt="">
         </div>
 
       </div>
