--- a/index.html
+++ b/index.html
@@ -55,38 +55,38 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+ <!-- ======= Header ======= -->
   
-  <header id="header" class="fixed-top">
-    <div class="social-links text-center text-md-right pt-3 pt-md-0">
-      <a href="#" class="facebook depois"><i class="bx bxl-facebook"></i></a>
-      <a href="#" class="instagram depois"><i class="bx bxl-instagram"></i></a>
-      <a href="#" class="linkedin depois"><i class="bx bxl-linkedin"></i></a>
-    </div>
-    <div class="container d-flex align-items-center">
+ <header id="header" class="fixed-top">
+  <div class="social-links text-center text-md-right pt-3 pt-md-0">
+    <a href="https://www.facebook.com/people/EMP-Oficial/61554028190664/" class="facebook depois"><i class="bx bxl-facebook"></i></a>
+    <a href="https://www.instagram.com/emp_oficialsp/?hl=pt" class="instagram depois"><i class="bx bxl-instagram"></i></a>
+    <a href="http://www.linkedin.com/in/emp-oficial" class="linkedin depois"><i class="bx bxl-linkedin"></i></a>
+  </div>
+  <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html"> <img src="./assets/imagens/logo_emp.png" alt="Logo EMP"></a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+    <h1 class="logo me-auto"><a href="index.html"> <img src="./assets/imagens/logo_emp.png" alt="Logo EMP"></a></h1>
+    <!-- Uncomment below if you prefer to use an image logo -->
+    <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar" class="navbar order-last order-lg-0">
-        <ul>
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="sobrenos.html">Sobre nós</a></li>
-          <li><a href="servicos.html">Serviços</a></li>
-          <li><a href="trainers.html">Doe</a></li>
-          <li><a href="trainers.html">Networking</a></li>
-          <li><a href="./emocional.html">Emocional</a></li>
-          <li><a href="pricing.html">Contato</a></li>
+    <nav id="navbar" class="navbar order-last order-lg-0">
+      <ul>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="sobrenos.html">Sobre nós</a></li>
+        <li><a href="servicos.html">Serviços</a></li>
+        <li><a href="doe.html">Doe</a></li>
+        <li><a href="trainers.html">Networking</a></li>
+        <li><a href="./emocional.html">Emocional</a></li>
+        <li><a href="pricing.html">Contato</a></li>
 
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </ul>
+      <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav><!-- .navbar -->
 
-      <button class="get-started-btn button" id="form-open">Login</button>
+    <button class="get-started-btn button" id="form-open">Login</button>
 
-    </div>
-  </header><!-- End Header -->
+  </div>
+</header><!-- End Header -->
 
   <section class="home">
     <div class="form_container">
@@ -602,8 +602,9 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Siga-nos</h4>
             <ul>
-              <a href="#" class="instagram depois"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="linkedin depois"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.facebook.com/people/EMP-Oficial/61554028190664/" class="facebook depois"><i class="bx bxl-facebook"></i></a>
+              <a href="https://www.instagram.com/emp_oficialsp/?hl=pt" class="instagram depois"><i class="bx bxl-instagram"></i></a>
+              <a href="http://www.linkedin.com/in/emp-oficial" class="linkedin depois"><i class="bx bxl-linkedin"></i></a>
             </ul>
           </div>
 
