--- a/servicos.html
+++ b/servicos.html
@@ -60,9 +60,9 @@
   
    <header id="header" class="fixed-top">
     <div class="social-links text-center text-md-right pt-3 pt-md-0">
-      <a href="https://www.facebook.com/people/EMP-Oficial/61554028190664/" class="facebook depois"><i class="bx bxl-facebook"></i></a>
-      <a href="https://www.instagram.com/emp_oficialsp/?hl=pt" class="instagram depois"><i class="bx bxl-instagram"></i></a>
-      <a href="http://www.linkedin.com/in/emp-oficial" class="linkedin depois"><i class="bx bxl-linkedin"></i></a>
+      <a href="#" class="facebook depois"><i class="bx bxl-facebook"></i></a>
+      <a href="#" class="instagram depois"><i class="bx bxl-instagram"></i></a>
+      <a href="#" class="linkedin depois"><i class="bx bxl-linkedin"></i></a>
     </div>
     <div class="container d-flex align-items-center">
 
@@ -73,10 +73,15 @@
       <nav id="navbar" class="navbar order-last order-lg-0 ">
         <ul>
           <li><a href="index.html">Home</a></li>
+    
           <li><a href="sobrenos.html">Sobre nós</a></li>
           <li><a class="active" href="servicos.html">Serviços</a></li>
-          <li><a href="doe.html">Doe</a></li>
-          <li><a href="trainers.html">Networking</a></li>
+          <li><a href="trainers.html">Doe</a></li>
+          <li class="dropdown"><a href="#"><span>Networking</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#">Artigos</a></li>
+            </ul>
+          </li>
           <li><a href="./emocional.html">Emocional</a></li>
           <li><a href="pricing.html">Contato</a></li>
 
@@ -447,9 +452,8 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Siga-nos</h4>
             <ul>
-              <a href="https://www.facebook.com/people/EMP-Oficial/61554028190664/" class="facebook depois"><i class="bx bxl-facebook"></i></a>
-              <a href="https://www.instagram.com/emp_oficialsp/?hl=pt" class="instagram depois"><i class="bx bxl-instagram"></i></a>
-              <a href="http://www.linkedin.com/in/emp-oficial" class="linkedin depois"><i class="bx bxl-linkedin"></i></a>
+              <a href="#" class="instagram depois"><i class="bx bxl-instagram"></i></a>
+              <a href="#" class="linkedin depois"><i class="bx bxl-linkedin"></i></a>
             </ul>
           </div>
 
