--- a/networking.html
+++ b/networking.html
@@ -25,11 +25,11 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-   <!-- Login -->
-   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
-   <link rel="stylesheet" href="./assets/css/login.css">
+  <!-- Login -->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+  <link rel="stylesheet" href="./assets/css/login.css">
    
-   <!-- <link rel="stylesheet" href="./assets/css/card.scss"> -->
+  <!-- <link rel="stylesheet" href="./assets/css/card.scss"> -->
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -51,6 +51,7 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
 </head>
 
 <body>
@@ -74,8 +75,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="sobrenos.html">Sobre nós</a></li>
         <li><a href="servicos.html">Serviços</a></li>
-        <li><a class="active" href="doe.html">Doe</a></li>
-        <li><a href="networking.html">Networking</a></li>
+        <li><a href="doe.html">Doe</a></li>
+        <li><a class="active" href="networking.html">Networking</a></li>
         <li><a href="./emocional.html">Emocional</a></li>
         <li><a href="pricing.html">Contato</a></li>
 
@@ -148,132 +149,88 @@
   </div>
 </section>
 
-<!-- ======= Hero Section ======= -->
-<section id="hero-doe" class="d-flex justify-content-center align-items-center doe-section">
+ <!-- ======= Hero Section ======= -->
+ <section id="hero" class="d-flex justify-content-center align-items-center">
   <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-    <h1 class="titulo-doe">Ajude <span class="laranja">mulheres</span> a liderarem seus <span class="laranja">negócios</span></h1>
+    <h1>Empodere-se:<br>Transfome sonhos<br>em realidade</h1>
     <!-- <h2>We are team of talented designers making websites with Bootstrap</h2> -->
+    <a href="sobrenos.html" class="btn-get-started">Leia mais</a>
   </div>
 </section><!-- End Hero -->
 
   <main id="main">
+    
+    <!-- ======= Our Values Section ======= -->
+    <section id="our-values" class="our-values">
+      <div class="container">
 
-    <!-- por que doar -->
-<div class="about_section layout_padding d-flex">
-  <div class="container">
-    </div>
-  </div>
-  <div class="about_section_2">
-     <div class="container">
-
-      <div class="col-md-12 text-center">
-        <h2 class="doacao">Por que doar?</h2>
-      </div>
+        <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
+          <h2 style="color: black;">A importância do networking</h2>
+        </div>
 
         <div class="row">
-           <!-- <div class="col-md-6">
-              <div class="about_img"><img src="images/about-img.png"></div>
-           </div> -->
-           <div class="col-md-6 alinhar">
-              <div class="about_taital_main mx-auto">
-                 <p class="about_text doe mx-auto">
-                  Doar para mulheres indígenas significa fortalecer não apenas indivíduos, mas comunidades inteiras. Essas doações contribuem para o empoderamento econômico, 
-                  o desenvolvimento sustentável, e promovem a igualdade de oportunidades, capacitando-as a se tornarem protagonistas de seus negócios. Além disso, ao direcionar recursos para kits de higiene, 
-                  estamos endereçando necessidades básicas essenciais, promovendo o bem-estar e a dignidade dessas mulheres empreendedoras em comunidades periféricas e indígenas.
-                  </p>
+
+          <div class="col-md-6 d-flex align-items-stretch">
+            <div class="card" style='background-image: url("./assets/imagens/indigenas.png");'>
+              <div class="card-body">
+                <h5 class="card-title"><a href="">No trabalho</a></h5>
+                <p class="card-text">
+                  Pode despertar a criatividade, inspirar novas ideias e aprimorar a maneira como se trabalha. Estar em contato com outros profissionais pode impulsionar 
+                  a carreira, auxiliar na conquista de objetivos e melhorar até a satisfação com o trabalho. É importante ter em mente que essa é uma relação de troca. 
+                  Ou seja, todas as partes que fazem parte desse relacionamento compartilham e recebem!
+                </p>
               </div>
-           </div>
-           <div class="col-md-6 alinhar">
-            <div class="about_img"><img src="./assets/imagens/indigena.png" class="img-fluid w-100 rounded"></div>
-         </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 alinhar">
-            <div class="about_img"><img src="./assets/imagens/periferia.png" class="img-fluid w-100 rounded"></div>
-         </div>
-          <div class="col-md-6 alinhar">
-             <div class="about_taital_main mx-auto">
-                <p class="about_text doe mx-auto">
-                  Doar para mulheres periféricas significa promover inclusão, empoderamento e crescimento econômico em comunidades desfavorecidas. Ao direcionar recursos, incluindo alimentos, você fortalece o 
-                  empreendedorismo dessas mulheres, contribui para a melhoria das condições de vida e auxilia na construção de uma sociedade mais justa e sustentável. Sua doação não apenas alimenta corpos, mas 
-                  também alimenta a autonomia e o potencial transformador dessas empreendedoras, criando impactos positivos duradouros.
-                 </p>
-             </div>
+            </div>
           </div>
-       </div>
-     </div>
-  </div>
-</div>
-<!-- por que doar -->
 
- <!-- ======= Cta Section ======= -->
- <section id="cta" class="cta">
-  <div class="container" data-aos="zoom-in">
+          <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+            <div class="card" style='background-image: url("./assets/imagens/indigenas.png");'>
+              <div class="card-body">
+                <h5 class="card-title"><a href="">Nos negócios</a></h5>
+                <p class="card-text">
+                  Quem empreende também precisa fazer a nutrição constante da rede de contatos. É fundamental criar uma rede de parceiros com que se possa contar,
+                  seja para buscar recursos, criar novos projetos ou viabilizar novas iniciativas. Um bom networking de negócios, abre espaço para novas oportunidades, 
+                  auxilia a aumentar o ganho de escala, e ainda mantém o gestor informado sobre sua área de atuação.
+                </p>
+              </div>
+            </div>
+          </div>
 
-    <div class="text-center">
+          <div class="col-md-6 d-flex align-items-stretch mt-4">
+            <div class="card" style='background-image: url("./assets/imagens/indigena.png");'>
+              <div class="card-body">
+                <h5 class="card-title"><a href="">Visibilidade</a></h5>
+                <p class="card-text">
+                  Expandir seus contatos é um dos melhores caminhos para desenvolver maior crescimento pessoal ou simplesmente adquirir novos conhecimentos. Estar mais próximo dos 
+                  colegas e gestores ajuda a aumentar seu alcance na hora de buscar uma nova oportunidade.
+                </p>
+              </div>
+            </div>
+          </div>
 
-      <div class="col-md-12 text-center">
-        <h2 class="doacao config">Como aplicamos os nossos recursos?</h2>
-      </div>
+          <div class="col-md-6 d-flex align-items-stretch mt-4">
+            <div class="card" style='background-image: url("./assets/imagens/indigena.png");'>
+              <div class="card-body">
+                <h5 class="card-title"><a href="">Faça parte de grupos</a></h5>
+                <p class="card-text">
+                  Existem grupos, comunidades ou fóruns que reúnem diversos profissionais em torno de um tema, área, estudo ou debate. Esses ambientes são verdadeiros “seleiros” de contatos. 
+                  Para fazer conexões, é importante ser ativo, ou seja, participar das conversas e compartilhar conteúdos interessantes. 
+                </p>
+              </div>
+            </div>
+          </div>
 
-      <p class="aplicar">
-        A transparência é um compromisso fundamental da EMP. Atuamos para tonar a organização cada dia mais eficiente, direcionando uma parte significativa dos recursos para negócios, alimentos,
-        inclusão digital e higiene. Todos os anos, apresentamos nossa prestação de contas, a qual é auditada por empresas especializadas. Vale ressaltar que nossos recursos serão integralmente 
-        direcionados para organizações não-governamentais parceiras, fortalecendo ainda mais nosso compromisso com a responsabilidade e a contribuição social. 
-      </p>
-
-    </div>
-
-  </div>
-</section><!-- End Cta Section -->
-
-<!-- ======= ONG's ======= -->
-<section id="services" class="services">
-  <div class="container">
-
-     <div class="col-md-12 text-center">
-        <h2 class="doacao config">Explore as organizações parceiras que apoiamos!</h2>
-      </div>
-
-    <div class="row">
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
-        <div class="icon-box">
-          <div class="icon"><img src="./assets/imagens/ong_historias2.png" class="img-fluid w-100 rounded" alt=""></div>
-          <h4><a class="link-doe" href="https://www.cruzandohistorias.org/?utm_source=google&utm_medium=wix_google_business_profile&utm_campaign=6783804885869853627">Cruzando histórias</a></h4>
-          <p>Acreditamos que o trabalho dignifica o homem e propósito o mantém feliz. Somos conscientes que sozinha a Cruzando Histórias seria só uma gota no oceano. Para promover
-            o impacto social que as pessoas precisam, desenhamos projetos que unem organizações, para juntos transformarmos realidades.
-          </p>
         </div>
+
       </div>
+    </section><!-- End Our Values Section -->
 
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="150">
-        <div class="icon-box">
-          <div class="icon"> <img src="./assets/imagens/ong_elas.png" class="img-fluid w-100 rounded" alt=""></div>
-          <h4><a class="link-doe" href="https://fundosocialelas.org/">Fundo elas </a></h4>
-          <p>O Fundo Elas é uma ONG para mulheres e é o primeiro fundo de investimento social que financia exclusivamente projetos que promovam o protagonismo das mulheres no Brasil.</p>
-        </div>
-      </div>
 
-      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
-        <div class="icon-box">
-          <div class="icon"> <img src="./assets/imagens/ong_rede.png" class="img-fluid w-100 rounded" alt=""> </div>
-          <h4><a class="link-doe" href="https://rme.net.br/">Rede mulher empreendedora</a></h4>
-          <p>O Instituto Rede Mulher Empreendedora, apoia e auxilia projetos e iniciativas que empoderam mulheres em situação de vulnerabilidade social, incentivando a
-            independência financeira e o poder de decisão pessoal.
-          </p>
-        </div>
-      </div>
-
-    </div>
-
-  </div>
-</section><!--ONG's -->
 
   </main><!-- End #main -->
 
-   <!-- ======= Footer ======= -->
-   <footer id="footer">
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
 
     <div class="footer-top">
       <div class="container">
@@ -373,6 +330,7 @@
     }
     )();
   </script>
+
 
 </body>
 
