--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-   <!-- Login -->
-   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
-   <link rel="stylesheet" href="./assets/css/login.css">
+  <!-- Login -->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+  <link rel="stylesheet" href="./assets/css/login.css">
    
-   <!-- <link rel="stylesheet" href="./assets/css/card.scss"> -->
+  <!-- <link rel="stylesheet" href="./assets/css/card.scss"> -->
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -75,7 +75,7 @@
         <li><a href="sobrenos.html">Sobre nós</a></li>
         <li><a href="servicos.html">Serviços</a></li>
         <li><a href="doe.html">Doe</a></li>
-        <li><a href="trainers.html">Networking</a></li>
+        <li><a href="networking.html">Networking</a></li>
         <li><a href="./emocional.html">Emocional</a></li>
         <li><a href="pricing.html">Contato</a></li>
 
@@ -88,65 +88,65 @@
   </div>
 </header><!-- End Header -->
 
-  <section class="home">
-    <div class="form_container">
-      <i class="uil uil-times form_close"></i>
-      <!-- Login From -->
-      <div class="form login_form">
-        <form action="#">
-          <h2>Login</h2>
+<section class="home">
+  <div class="form_container">
+    <i class="uil uil-times form_close"></i>
+    <!-- Login From -->
+    <div class="form login_form">
+      <form action="#">
+        <h2>Login</h2>
 
-          <div class="input_box">
-            <input type="email" placeholder="Insira seu email" required />
-            <i class="uil uil-envelope-alt email"></i>
-          </div>
-          <div class="input_box">
-            <input type="password" placeholder="Insira sua senha" required />
-            <i class="uil uil-lock password"></i>
-            <i class="uil uil-eye-slash pw_hide"></i>
-          </div>
+        <div class="input_box">
+          <input type="email" placeholder="Insira seu email" required />
+          <i class="uil uil-envelope-alt email"></i>
+        </div>
+        <div class="input_box">
+          <input type="password" placeholder="Insira sua senha" required />
+          <i class="uil uil-lock password"></i>
+          <i class="uil uil-eye-slash pw_hide"></i>
+        </div>
 
-          <div class="option_field">
-            <span class="checkbox">
-              <input type="checkbox" id="check" />
-              <label for="check">Lembre-me</label>
-            </span>
-            <a href="#" class="forgot_pw">Esqueceu a senha?</a>
-          </div>
+        <div class="option_field">
+          <span class="checkbox">
+            <input type="checkbox" id="check" />
+            <label for="check">Lembre-me</label>
+          </span>
+          <a href="#" class="forgot_pw">Esqueceu a senha?</a>
+        </div>
 
-          <button class="button">Login</button>
+        <button class="button">Login</button>
 
-          <div class="login_signup">Não possui uma conta? <a href="#" id="signup">Cadastre-se</a></div>
-        </form>
-      </div>
-
-      <!-- Signup From -->
-      <div class="form signup_form">
-        <form action="#">
-          <h2>Cadastrar</h2>
-
-          <div class="input_box">
-            <input type="email" placeholder="Insira seu email" required />
-            <i class="uil uil-envelope-alt email"></i>
-          </div>
-          <div class="input_box">
-            <input type="password" placeholder="Crie sua senha" required />
-            <i class="uil uil-lock password"></i>
-            <i class="uil uil-eye-slash pw_hide"></i>
-          </div>
-          <div class="input_box">
-            <input type="password" placeholder="Confirme sua senha" required />
-            <i class="uil uil-lock password"></i>
-            <i class="uil uil-eye-slash pw_hide"></i>
-          </div>
-
-          <button class="button">Cadastra-se</button>
-
-          <div class="login_signup">Já possui uma conta? <a href="#" id="login">Login</a></div>
-        </form>
-      </div>
+        <div class="login_signup">Não possui uma conta? <a href="#" id="signup">Cadastre-se</a></div>
+      </form>
     </div>
-  </section>
+
+    <!-- Signup From -->
+    <div class="form signup_form">
+      <form action="#">
+        <h2>Cadastrar</h2>
+
+        <div class="input_box">
+          <input type="email" placeholder="Insira seu email" required />
+          <i class="uil uil-envelope-alt email"></i>
+        </div>
+        <div class="input_box">
+          <input type="password" placeholder="Crie sua senha" required />
+          <i class="uil uil-lock password"></i>
+          <i class="uil uil-eye-slash pw_hide"></i>
+        </div>
+        <div class="input_box">
+          <input type="password" placeholder="Confirme sua senha" required />
+          <i class="uil uil-lock password"></i>
+          <i class="uil uil-eye-slash pw_hide"></i>
+        </div>
+
+        <button class="button">Cadastra-se</button>
+
+        <div class="login_signup">Já possui uma conta? <a href="#" id="login">Login</a></div>
+      </form>
+    </div>
+  </div>
+</section>
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex justify-content-center align-items-center">
@@ -158,7 +158,7 @@
   </section><!-- End Hero -->
 
   <!-- ======= Counts Section ======= -->
-  <section id="counts" class="counts section-bg">
+  <section id="counts" class="counts section-bg cor-numeros">
     <div class="container">
 
       <div class="row counters">
@@ -434,59 +434,78 @@
   </div>
   <!-- Services End -->
 
-  <!-- ======= Why Us Section ======= -->
-  <section id="why-us" class="why-us">
-    <div class="container" data-aos="fade-up">
+  <!-- ======= Testimonials Section ======= -->
+  <section id="testimonials" class="testimonials section-bg">
+    <div class="container">
 
-      <div class="row">
-        <div class="col-lg-4 d-flex align-items-stretch">
-          <div class="content">
-            <h3 class="depoimento">Depoimentos</h3>
-            <p class="depoimento">
-              Mulheres microempreendedoras transformam sonhos em sucesso. Veja o que nossas clientes têm a dizer sobre suas jornadas inspiradoras.
-            </p>
-          </div>
-        </div>
-        
-        <div class="col-lg-8 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-          <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
+      <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">Depoimentos</h1>
+        <p class="depoimento">
+          Mulheres microempreendedoras transformam sonhos em sucesso. Veja o que nossas clientes têm a dizer sobre suas jornadas inspiradoras.
+        </p>
+      </div>
 
-              <div class="carousel-item active">
-                <div class="icon-box mt-4 mt-xl-0">
-                  <img src="./assets/imagens/depoimento.png" alt="">
-                </div>
-              </div>
+      <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+        <div class="swiper-wrapper">
 
-              <div class="carousel-item">
-                <div class="icon-box mt-4 mt-xl-0">
-                  <img src="./assets/imagens/depoimento.png" alt="">
-                </div>
-              </div>
-
-              <div class="carousel-item">
-                <div class="icon-box mt-4 mt-xl-0">
-                  <img src="./assets/imagens/depoimento.png" alt="">
-                </div>
-              </div>
-
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Com a EMP, meus problemas financeiros se tornaram superáveis. A plataforma é uma aliada essencial para o crescimento do nosso negócio.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+              <h3>Sara Rodrigues</h3>
+              <h4>Microempreendedora</h4>
             </div>
+          </div><!-- End testimonial item -->
 
-            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Com a EMP, meus problemas financeiros se tornaram superáveis. A plataforma é uma aliada essencial para o crescimento do nosso negócio.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+              <h3>Andreia Santos</h3>
+              <h4>Microempreendedora </h4>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Com a EMP, meus problemas financeiros se tornaram superáveis. A plataforma é uma aliada essencial para o crescimento do nosso negócio.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+              <h3>Fernanda Borges</h3>
+              <h4>Microempreendedora</h4>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Com a EMP, meus problemas financeiros se tornaram superáveis. A plataforma é uma aliada essencial para o crescimento do nosso negócio.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+              <h3>Lara Andrade</h3>
+              <h4>Microempreendedora</h4>
+            </div>
+          </div><!-- End testimonial item -->
+
         </div>
-        
+        <div class="swiper-pagination"></div>
       </div>
 
     </div>
-  </section><!-- End Why Us Section -->
+  </section><!-- End Testimonials Section -->
 
   <!-- ======= Pricing Section - Planos ======= -->
   <section id="pricing" class="pricing ">
@@ -508,7 +527,7 @@
               <li>Suporte emocional</li>
               <li class="na">Alerta</li>
               <li class="na">Dashboard</li>
-              <li class="na">Kpi</li>
+              <li class="na">KPI</li>
             </ul>
             <div class="btn-wrap">
               <a href="#" class="btn-buy">Assinar</a>
@@ -526,7 +545,7 @@
               <li>Suporte emocional</li>
               <li>Alerta</li>
               <li>Dashboard</li>
-              <li>Kpi</li>
+              <li>KPI</li>
             </ul>
             <div class="btn-wrap">
               <a href="#" class="btn-buy">Assinar</a>
