--- a/servicos.html
+++ b/servicos.html
@@ -76,7 +76,7 @@
           <li><a href="sobrenos.html">Sobre nós</a></li>
           <li><a class="active" href="servicos.html">Serviços</a></li>
           <li><a href="doe.html">Doe</a></li>
-          <li><a href="trainers.html">Networking</a></li>
+          <li><a href="networking.html">Networking</a></li>
           <li><a href="./emocional.html">Emocional</a></li>
           <li><a href="pricing.html">Contato</a></li>
 
@@ -301,7 +301,7 @@
               <li>Suporte emocional</li>
               <li class="na">Alerta</li>
               <li class="na">Dashboard</li>
-              <li class="na">Kpi</li>
+              <li class="na">KPI</li>
             </ul>
             <div class="btn-wrap">
               <a href="#" class="btn-buy">Assinar</a>
@@ -319,7 +319,7 @@
               <li>Suporte emocional</li>
               <li>Alerta</li>
               <li>Dashboard</li>
-              <li>Kpi</li>
+              <li>KPI</li>
             </ul>
             <div class="btn-wrap">
               <a href="#" class="btn-buy">Assinar</a>
