--- a/sobrenos.html
+++ b/sobrenos.html
@@ -76,7 +76,7 @@
           <li><a class="active" href="sobrenos.html">Sobre nós</a></li>
           <li><a href="servicos.html">Serviços</a></li>
           <li><a href="doe.html">Doe</a></li>
-          <li><a href="trainers.html">Networking</a></li>
+          <li><a href="networking.html">Networking</a></li>
           <li><a href="./emocional.html">Emocional</a></li>
           <li><a href="pricing.html">Contato</a></li>
 
